new ciim version account of conflicts data

--- a/kubernetes/ohos/ciim/properties/app_ctx_persisted.properties
+++ b/kubernetes/ohos/ciim/properties/app_ctx_persisted.properties
@@ -2,9 +2,12 @@
 elasticsearch.client.host=ciim-internal-tna-es-http.tna-ohos
 elasticsearch.cluster=ciim-internal-tna
 
+
 publication.es.hostname=ciim-public-tna-es-http.tna-ohos
 publication.es.clean.hostname=ciim-public-clean-tna-es-http.tna-ohos
 publication.endpoints.enabled=true
+
+mongo.db.url=dGVzdA==
 
 processors.iadata.maxRecords=20000
 processors.iadata.batchSize=2000
