Updated host name

--- a/kubernetes/ohos/ingress/rosetta_3_ingress.yml
+++ b/kubernetes/ohos/ingress/rosetta_3_ingress.yml
@@ -8,7 +8,8 @@ metadata:
 spec:
   ingressClassName:  tna-ohos
   rules:
-    - http:
+    - host: rosetta-ohos.nationalarchives.gov.uk
+      http:
         paths:
           - path: /rosetta-3
             pathType: Prefix
