--- a/kubernetes/ohos/ingress/ingress.yml
+++ b/kubernetes/ohos/ingress/ingress.yml
@@ -10,6 +10,13 @@ spec:
   rules:
     - http:
         paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: rosetta-3-service
+                port:
+                  name: rosetta-port
           - path: /tna/api/
             pathType: Prefix
             backend:
