Updated ingress to use tls

--- a/kubernetes/ohos/ingress/rosetta_3_ingress.yml
+++ b/kubernetes/ohos/ingress/rosetta_3_ingress.yml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     konghq.com/plugins: request-transform-ohos
 spec:
-  ingressClassName:  tna-ohos
+  ingressClassName: tna-ohos
   rules:
     - host: rosetta-ohos.nationalarchives.gov.uk
       http:
@@ -18,3 +18,6 @@ spec:
                 name: rosetta-3-service
                 port:
                   name: rosetta-port
+  tls:
+    - hosts:
+        - rosetta-ohos.nationalarchives.gov.uk
