--- a/kubernetes/ohos/acme/acme.yml
+++ b/kubernetes/ohos/acme/acme.yml
@@ -29,7 +29,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: acme-service
-  namespace: kc
+  namespace: tna-ohos
 spec:
   type: ClusterIP
   selector:
