--- a/kubernetes/overlays/staging/kustomization.yaml
+++ b/kubernetes/overlays/staging/kustomization.yaml
@@ -20,6 +20,7 @@ bases:
   - ../../ohos/rosetta-3-export
   - ../../ohos/rosetta-3-graphql
   - ../../ohos/acme
+  - ../../internal-es
 commonAnnotations:
   environment: dev
 patchesStrategicMerge:
