--- a/kubernetes/ciim-staging/properties/app_ctx_transient.properties
+++ b/kubernetes/ciim-staging/properties/app_ctx_transient.properties
@@ -1,11 +1,11 @@
-ciim.db.url=jdbc:mysql://ciim-db-service.etna/ciim?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
+ciim.db.url=jdbc:mysql://ciim-db-service.etna/ciim_etna?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
 ciim.db.dialect=org.hibernate.dialect.MySQL8Dialect
 ciim.db.driver=com.mysql.cj.jdbc.Driver
 ciim.db.poolSize=25
 
 # CIIM VAULT DB PROPERTIES
 
-ciim.vault.db.url=jdbc:mysql://ciim-db-service.etna/ciim_vault?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
+ciim.vault.db.url=jdbc:mysql://ciim-db-service.etna/ciim_vault_etna?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
 
 ciim.vault.db.username=ciim
 
@@ -21,8 +21,8 @@ ciim.vault.db.poolSize=5
 ciim.data.dir=/ciim
 
 
-elasticsearch.cluster=ciim-internal
-elasticsearch.client.host=ciim-internal-es-http.etna
+elasticsearch.cluster=ciim-internal-etna
+elasticsearch.client.host=ciim-internal-etna-es-http.etna
 
 media.process.files=false
 media.zoom.processing.enabled=false
