Added new public ES

--- a/kubernetes/overlays/staging/kustomization.yaml
+++ b/kubernetes/overlays/staging/kustomization.yaml
@@ -21,6 +21,7 @@ bases:
   - ../../ohos/rosetta-3-graphql
   - ../../ohos/acme
   - ../../internal-es
+  - ../../public-es
 commonAnnotations:
   environment: dev
 patchesStrategicMerge:
