--- a/kubernetes/rosetta-staging/es_ingress.yml
+++ b/kubernetes/rosetta-staging/es_ingress.yml
@@ -21,6 +21,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: ciim-public-es-http
+                name: ciim-public-etna-es-http
                 port:
                   number: 9200
