Added rosetta 3 / ingress and created kong rewrite plugin

--- a/kubernetes/overlays/staging/kustomization.yaml
+++ b/kubernetes/overlays/staging/kustomization.yaml
@@ -22,6 +22,8 @@ bases:
   - ../../ohos/acme
   - ../../internal-es
   - ../../public-es
+  - ../../ingress
+  - ../../rosetta-3
 commonAnnotations:
   environment: dev
 patchesStrategicMerge:
