--- a/kubernetes/ingress/rosetta_ingress.yml
+++ b/kubernetes/ingress/rosetta_ingress.yml
@@ -14,6 +14,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: rosetta-3-service-test
+                name: rosetta-3-service
                 port:
                   name: rosetta-port
