--- a/kubernetes/rosetta-3/config/application.yml
+++ b/kubernetes/rosetta-3/config/application.yml
@@ -75,7 +75,7 @@ rosetta:
           response:
             policy: list
             names:
-              - ciim/search/response
+              - ciim/get/response
 
   profile:
     profiles:
@@ -205,6 +205,12 @@ rosetta:
         properties:
           mutable: true
           spec: ${base_paths.proteus}/ciim_get_request.json
+
+      - name: ciim/get/response
+        type: proteus
+        properties:
+          mutable: true
+          spec: ${base_paths.proteus}/ciim_get_response.json
 
       # Global data transforms
       - name: singularize-creation
