--- a/kubernetes/rosetta-3/kustomization.yml
+++ b/kubernetes/rosetta-3/kustomization.yml
@@ -7,6 +7,7 @@ configMapGenerator:
       - ./config/aggs_count_to_doc_count.json
       - ./config/application.yml
       - ./config/ciim_get_request.json
+      - ./config/ciim_get_response.json
       - ./config/ciim_search_request.json
       - ./config/ciim_search_response.json
       - ./config/generic_search_defaults.json
