--- a/kubernetes/api/data-api.yml
+++ b/kubernetes/api/data-api.yml
@@ -33,7 +33,7 @@ spec:
             - name: index.password
               valueFrom:
                 secretKeyRef:
-                  name: ciim-public-es-elastic-user
+                  name: ciim-public-etna-es-elastic-user
                   key: elastic
           livenessProbe:
             httpGet:
@@ -49,7 +49,7 @@ metadata:
   namespace: etna
 data:
   index.username: "elastic"
-  index.host: "ciim-public-es-http.etna"
+  index.host: "ciim-public-etna-es-http"
   index.port: "9200"
 ---
 apiVersion: v1
