--- a/kubernetes/overlays/staging/kustomization.yaml
+++ b/kubernetes/overlays/staging/kustomization.yaml
@@ -24,6 +24,7 @@ bases:
   - ../../public-es
   - ../../ingress
   - ../../rosetta-3
+  - ../../api
 commonAnnotations:
   environment: dev
 patchesStrategicMerge:
