--- a/kubernetes/api/ingress.yml
+++ b/kubernetes/api/ingress.yml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: etna-ingress
+  name: etna-ingress-api
   namespace: etna
   annotations:
     kubernetes.io/ingress.class: kong
