--- a/kubernetes/overlays/staging/kustomization.yaml
+++ b/kubernetes/overlays/staging/kustomization.yaml
@@ -25,6 +25,7 @@ bases:
   - ../../ingress
   - ../../rosetta-3
   - ../../api
+  - ../../acme
 commonAnnotations:
   environment: dev
 patchesStrategicMerge:
