--- a/kubernetes/ingress/es_ingress.yml
+++ b/kubernetes/ingress/es_ingress.yml
@@ -8,7 +8,8 @@ metadata:
     kubernetes.io/ingress.class: kong
 spec:
   rules:
-    - http:
+    - host: afa13a7c0067b4f01991b0bad9e003a4-edf0e30af2b95f5f.elb.eu-west-2.amazonaws.com
+      http:
         paths:
           - path: /es
             pathType: Prefix
