Next/previous: component_search, es_query, ciim-get-response, ciim-search-response: kustomization included new files.

--- a/kubernetes/rosetta-3/kustomization.yml
+++ b/kubernetes/rosetta-3/kustomization.yml
@@ -14,3 +14,5 @@ configMapGenerator:
       - ./config/generic_search_modifications.json
       - ./config/singularize_creation.json
       - ./config/inject_date_hist.json
+      - ./config/es_query.json
+      - ./config/component_search.json
