added scalable storage class to es

--- a/kubernetes/public-es/public-es.yml
+++ b/kubernetes/public-es/public-es.yml
@@ -26,6 +26,7 @@ spec:
             resources:
               requests:
                 storage: 500Gi
+            storageClassName: ebs-sc
       podTemplate:
         spec:
           volumes:
