--- a/kubernetes/public-es/public-es.yml
+++ b/kubernetes/public-es/public-es.yml
@@ -16,7 +16,7 @@ spec:
         disabled: true
   nodeSets:
     - name: default
-      count: 0
+      count: 1
       volumeClaimTemplates:
         - metadata:
             name: elasticsearch-data
@@ -25,7 +25,8 @@ spec:
               - ReadWriteOnce
             resources:
               requests:
-                storage: 250Gi
+                storage: 500Gi
+            storageClassName: ebs-sc
       podTemplate:
         spec:
           volumes:
