Added next previous back to get endpoint

--- a/kubernetes/rosetta-3/config/application.yml
+++ b/kubernetes/rosetta-3/config/application.yml
@@ -76,6 +76,11 @@ rosetta:
           request:
             policy: list
             names:
+              - to-generic-search
+              - generic-search-defaults
+              - generic-search-modifications
+              - generic-to-elastic
+              - elastic-modifications
               - ciim/get/request
           response:
             policy: list
