needed to include the component on the get request

--- a/kubernetes/rosetta-3/config/application.yml
+++ b/kubernetes/rosetta-3/config/application.yml
@@ -218,6 +218,8 @@ rosetta:
         properties:
           mutable: true
           spec: ${base_paths.proteus}/ciim_get_response.json
+          include:
+            - ./config/component_search.json
 
       # Global data transforms
       - name: singularize-creation
