--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
-/.idea/jpa-buddy.xml
-/.idea/.gitignore
-/kubernetes/application.yaml
-/.idea/ds-infrastructure-ciim.iml
-/.idea/misc.xml
-/.idea/modules.xml
-/kubernetes/secret.yml
-/.idea/vcs.xml
+.idea
+plans
+.terraform
+.tfstate
+*.tfstate*
+.DS_Store
+plans/
+scratch
+*.retry
+*tmp
+.disable
+*.disable*
+
+kubernetes/application.yaml
+kubernetes/secret.yml
