updated acme ingress for ohos

--- a/kubernetes/ohos/acme/acme_ingress.yml
+++ b/kubernetes/ohos/acme/acme_ingress.yml
@@ -17,6 +17,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: acme-service
+                name: acme-service-ohos
                 port:
                   number: 80
