--- a/kubernetes/ohos/acme/acme.yml
+++ b/kubernetes/ohos/acme/acme.yml
@@ -28,7 +28,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: acme-service
+  name: acme-service-ohos
   namespace: tna-ohos
 spec:
   type: ClusterIP
