--- a/kubernetes/ohos/acme/acme_ingress.yml
+++ b/kubernetes/ohos/acme/acme_ingress.yml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     konghq.com/protocols: "http"
 spec:
+  ingressClassName: tna-ohos
   tls:
     - hosts:
         - tna.rosetta.k-int.com
