--- a/kubernetes/rosetta-3/config/application.yml
+++ b/kubernetes/rosetta-3/config/application.yml
@@ -110,7 +110,7 @@ rosetta:
           data: *global-data-transforms
 
   transform:
-    timeout_millis: 60000
+    timeout: 60000
     glyphs:
       # Elastic search glyphs
       - name: to-generic-search
