--- a/kubernetes/rosetta-3/config/application.yml
+++ b/kubernetes/rosetta-3/config/application.yml
@@ -183,7 +183,7 @@ rosetta:
         path_config:
           paths:
             topic: "topic.summary.title.keyword"
-            collection: "@hierarch.identifier.__reference_number"
+            collection: "@hierarch.identifier.value"
             group: "@datatype.group.value"
             level: "level.value"
             type: "repository.@datatype.actual"
