remapped the collectiong to heriachy level - ohos

--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -219,7 +219,7 @@ rosetta:
               datatype: "@datatype.base"
               property: "property.name.value.keyword"
               place: "place.name.value.keyword"
-              collection: "collection.identifier.value"
+              collection: "@hierarch.identifier.value"
               collectionOhos: "hierarchy.summary.title.keyword"
               date: "creation.date.from"
               title: "summary.title.keyword"
