remapped the collectiong to heriachy level

--- a/kubernetes/rosetta-3/config/application.yml
+++ b/kubernetes/rosetta-3/config/application.yml
@@ -143,55 +143,55 @@ rosetta:
         properties:
           index: public-es
           request_timeout: 60000
-        date_range_format: "{from} - {to}"
-        date_aggregations:
-          - path: "origination.date.from"
-            agg_name: "coveringDates"
-            additional_path: "origination.date.to"
-            format: "yyyy"
-            date_ranges:
-              - from: "1100"
-                to: "1199"
-              - from: "1200"
-                to: "1299"
-              - from: "1300"
-                to: "1399"
-              - from: "1400"
-                to: "1499"
-              - from: "1500"
-                to: "1599"
-              - from: "1600"
-                to: "1699"
-              - from: "1700"
-                to: "1799"
-              - from: "1800"
-                to: "1899"
-              - from: "1900"
-                to: "1924"
-              - from: "1925"
-                to: "1949"
-              - from: "1950"
-                to: "3000"
-          - path: "availability.access.opening.date.from"
-            agg_name: "openingFromDate"
-          - path: "availability.access.opening.date.to"
-            agg_name: "openingToDate"
-          - path: "origination.date.from"
-            agg_name: "coveringFromDate"
-          - path: "origination.date.to"
-            agg_name: "coveringToDate"
-        path_config:
-          paths:
-            topic: "topic.summary.title.keyword"
-            collection: "collection.identifier.value"
-            group: "@datatype.group.value"
-            level: "level.value"
-            type: "repository.@datatype.actual"
-            country: "place.@hierarchy.name.value.keyword"
-            closure: "availability.closure.label.value.keyword"
-            catalogueSource: "source.value"
-            heldBy: "repository.name.value.keyword"
-            webReference: "web.identifier.value.lower"
+          date_range_format: "{from} - {to}"
+          date_aggregations:
+            - path: "origination.date.from"
+              agg_name: "coveringDates"
+              additional_path: "origination.date.to"
+              format: "yyyy"
+              date_ranges:
+                - from: "1100"
+                  to: "1199"
+                - from: "1200"
+                  to: "1299"
+                - from: "1300"
+                  to: "1399"
+                - from: "1400"
+                  to: "1499"
+                - from: "1500"
+                  to: "1599"
+                - from: "1600"
+                  to: "1699"
+                - from: "1700"
+                  to: "1799"
+                - from: "1800"
+                  to: "1899"
+                - from: "1900"
+                  to: "1924"
+                - from: "1925"
+                  to: "1949"
+                - from: "1950"
+                  to: "3000"
+            - path: "availability.access.opening.date.from"
+              agg_name: "openingFromDate"
+            - path: "availability.access.opening.date.to"
+              agg_name: "openingToDate"
+            - path: "origination.date.from"
+              agg_name: "coveringFromDate"
+            - path: "origination.date.to"
+              agg_name: "coveringToDate"
+          path_config:
+            paths:
+              topic: "topic.summary.title.keyword"
+              collection: "@hierarch.identifier.value"
+              group: "@datatype.group.value"
+              level: "level.value"
+              type: "repository.@datatype.actual"
+              country: "place.@hierarchy.name.value.keyword"
+              closure: "availability.closure.label.value.keyword"
+              catalogueSource: "source.value"
+              heldBy: "repository.name.value.keyword"
+              webReference: "web.identifier.value.lower"
 
       - name: ciim/search/request
         type: proteus
