--- a/kubernetes/rosetta-3/rosetta.yml
+++ b/kubernetes/rosetta-3/rosetta.yml
@@ -11,7 +11,10 @@ spec:
   replicas: 1
   progressDeadlineSeconds: 600
   strategy:
-    type: Recreate
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 0
+      maxSurge: 1
   template:
     metadata:
       labels:
