--- a/kubernetes/rosetta-3/rosetta.yml
+++ b/kubernetes/rosetta-3/rosetta.yml
@@ -48,6 +48,11 @@ spec:
           resources:
             requests:
               memory: 4Gi
+          readinessProbe:
+            httpGet:
+              path: /actuator/health/readiness
+              port: rosetta
+            initialDelaySeconds: 30
 ---
 apiVersion: v1
 kind: Service
