Added new rosetta 3 for live beta

--- a/kubernetes/overlays/staging/kustomization.yaml
+++ b/kubernetes/overlays/staging/kustomization.yaml
@@ -26,6 +26,7 @@ bases:
   - ../../rosetta-3
   - ../../api
   - ../../acme
+  - ../../rosetta-3-PROD
 commonAnnotations:
   environment: dev
 patchesStrategicMerge:
