--- a/kubernetes/ingress/ingress.yml
+++ b/kubernetes/ingress/ingress.yml
@@ -5,6 +5,7 @@ metadata:
   namespace: etna
   annotations:
     kubernetes.io/ingress.class: kong
+    konghq.com/plugins: request-transform-etna
 spec:
   tls:
     - hosts:
