added cantaloupe and iiif

--- a/kubernetes/ingress/ingress.yml
+++ b/kubernetes/ingress/ingress.yml
@@ -22,6 +22,13 @@ spec:
                 name: rosetta-3-service
                 port:
                   name: rosetta-port
+          - path: /iiif/
+            pathType: Prefix
+            backend:
+              service:
+                name: rosettav-3-service
+                port:
+                  name: rosettav-3-port
     - host: afa13a7c0067b4f01991b0bad9e003a4-edf0e30af2b95f5f.elb.eu-west-2.amazonaws.com
       http:
         paths:
