--- a/kubernetes/overlays/staging/kustomization.yaml
+++ b/kubernetes/overlays/staging/kustomization.yaml
@@ -27,6 +27,8 @@ bases:
   - ../../api
   - ../../acme
   - ../../rosetta-3-PROD
+  - ../../rosetta-3-iiif
+  - ../../cantaloupe
 commonAnnotations:
   environment: dev
 patchesStrategicMerge:
