--- a/kubernetes/cantaloupe/properties/cantaloupe.properties
+++ b/kubernetes/cantaloupe/properties/cantaloupe.properties
@@ -54,7 +54,7 @@ http.accept_queue_limit =
 # Base URI to use for internal links, such as Link headers and JSON-LD
 # @id values, in a reverse-proxy context. This should only be used when
 # X-Forwarded-* headers cannot be used instead. (See the user manual.)
-base_uri = https://tna.ciim.k-int.com/image/
+base_uri = https://rosetta-staging.k-int.com/image/
 
 # Normally, slashes in a URI path component must be percent-encoded as
 # "%2F". If your proxy is not able to pass these through without decoding,
@@ -196,7 +196,7 @@ HttpSource.lookup_strategy = BasicLookupStrategy
 
 # URL that will be prefixed to the identifier in the request URL.
 # Trailing slash is important!
-HttpSource.BasicLookupStrategy.url_prefix = http://aba8bbc248c7248429b60b3fcbfde942-e6a006db0770fe4b.elb.eu-west-2.amazonaws.com/tna/api/secure/ui/media/
+HttpSource.BasicLookupStrategy.url_prefix = http://afa13a7c0067b4f01991b0bad9e003a4-edf0e30af2b95f5f.elb.eu-west-2.amazonaws.com//tna/api/secure/ui/media/
 
 # Path, extension, query string, etc. that will be suffixed to the
 # identifier in the request URL.
