--- a/kubernetes/ingress/ingress.yml
+++ b/kubernetes/ingress/ingress.yml
@@ -26,9 +26,9 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: rosettav-3-service
+                name: iiif-service
                 port:
-                  name: rosettav-3-port
+                  name: iiif-port
     - host: afa13a7c0067b4f01991b0bad9e003a4-edf0e30af2b95f5f.elb.eu-west-2.amazonaws.com
       http:
         paths:
